--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@ psycopg2==2.9.10
 python-decouple==3.8
 sqlparse==0.5.3
 tzdata==2024.2
+asgiref==3.8.1
+bleach==6.2.0
+Django==5.1.4
+django-summernote==0.8.20.0
+pillow==11.0.0
+psycopg2==2.9.10
+python-decouple==3.8
+sqlparse==0.5.3
+tzdata==2024.2
+webencodings==0.5.1
